# WindAnalysis

./: .databricks-sync-ignore  .databricksignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  Makefile  README.md  app-create.json  app.json  app.yaml  build_app.sh  cleanup-databricks.bat  cleanup-requirements.py  create-app.bat  create_upload_zip.py  databricks-env.bat  databricks.yml  deploy-app.bat  pyproject.toml  requirements.txt  run_app.py  run_test_main.py  scada_main.py
.databricks/: project.json.example
assets/templates/: template_scada.docx
experiments/real_run_test/: config.yml
experiments/scada_analyse/: config.yml
frontend/: .env.example  vite.config.ts
frontend/src/: App.tsx  AppContent.tsx
frontend/src/components/: ChartViewer.tsx
frontend/src/components/config-review/: GeneralInfoTab.tsx
frontend/src/components/layout/: MainLayout.tsx
frontend/src/components/results/: ResultsSidebar.tsx  RunTestResults.tsx  ScadaResults.tsx
frontend/src/hooks/: useConfigParser.ts
frontend/src/pages/: HistoryPage.tsx
frontend/src/services/: api.ts
frontend/src/types/: analysis.ts  config.ts  wizard.ts
frontend/src/wizard/: WizardContainer.tsx  WizardContext.tsx
resources/: wind_app.yml
src/: logger_config.py
src/wind_turbine_analytics/api/: config.py  main.py
src/wind_turbine_analytics/cli/: __init__.py  console.py  logger.py  progress.py  workflow_runner.py
src/wind_turbine_analytics/data_processing/: data_processing.py  status_levels.py
src/wind_turbine_analytics/presentation/: cli_presenter.py  word_presenter.py
(+92 files in other folders)
